--- a/clientportal.html
+++ b/clientportal.html
@@ -48,9 +48,24 @@
 						<!-- Breakfast -->
 							<article id="photo">
               <h2 class="major">Messanger</h2>
-              <input type="file" accept="image/*" id="photoUpload" style="margin-bottom: 10px;" />
-              <button onclick="handleUpload()">Upload Photo</button>
+              <!--<input type="file" accept="image/*" id="photoUpload" style="margin-bottom: 10px;" />
+               <button onclick="handleUpload()">Upload Photo</button> -->
               <div id="photoPreview" style="margin-top: 15px;">
+              <h3 style="margin-top: 30px;">Chat</h3>
+              <div id="chatWindow" class="chat-window"></div>
+              <div class="chat-input-wrapper">
+  <label for="photoUpload" class="upload-icon">
+    <svg viewBox="0 0 24 24" width="24" height="24" fill="#2196F3">
+      <circle cx="12" cy="12" r="10" fill="#2196F3"/>
+      <line x1="12" y1="8" x2="12" y2="16" stroke="#fff" stroke-width="2"/>
+      <line x1="8" y1="12" x2="16" y2="12" stroke="#fff" stroke-width="2"/>
+    </svg>
+  </label>
+  <input type="file" accept="image/*" id="photoUpload" style="display: none;" onchange="handleUpload()" />
+  
+  <input type="text" id="chatMessage" placeholder="Type a message..." />
+  <button onclick="sendMessage()">Send</button>
+</div>
                 <!-- Image will appear here -->
               </div>
             </article>
@@ -163,106 +178,213 @@ body, html {
   height: 100%;
   margin: 0;
 }
+.chat-input-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.chat-window {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 15px;
+  background: rgba(255, 255, 255, 0.1); /* slightly more transparent */
+  backdrop-filter: blur(10px); /* frosted glass effect */
+  -webkit-backdrop-filter: blur(10px);
+  padding: 15px;
+  height: 250px;
+  overflow-y: auto;
+  margin-bottom: 10px;
+  color: black;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.upload-icon {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 6px;
+  border-radius: 50%;
+  transition: background 0.3s;
+}
+
+.upload-icon:hover {
+  background: rgba(33, 150, 243, 0.1);
+}
+
+.chat-input-wrapper input[type="text"] {
+  flex: 1;
+  padding: 8px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  font-size: 1em;
+}
+
+.chat-input-wrapper button {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 10px;
+  background: #2196F3;
+  color: white;
+  cursor: pointer;
+}
+
+
+
+
 </style>
 <!--JS-->
+    <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/main.js"></script>
+
   <script>
-    window.addEventListener('DOMContentLoaded', () => {
-    const clientId = sessionStorage.getItem('clientId');
-    const display = document.getElementById('client-id-display');
-    if (clientId) {
-      display.textContent = "Client ID: " + clientId;
-    } else {
-      display.textContent = "Client ID not found.";
-    }
-  });
-    const greetingDiv = document.getElementById('greeting');
-    const lastName = sessionStorage.getItem('lastName');
-    if (lastName) {
-      document.getElementById('greeting').textContent = `Hey ${lastName} 👋`;
-    }
-    const daysContainer = document.getElementById('days-container');
-    const uploadSection = document.getElementById('upload-section');
-    const selectedDayTitle = document.getElementById('selected-day-title');
-    const photoForm = document.getElementById('photo-form');
-    const photoInput = document.getElementById('photo-input');
-    let selectedDay = null;
-    function formatDate(date) {
-      return date.toLocaleDateString(undefined, {
-        weekday: 'short',
-        month: 'short',
-        day: 'numeric'
-      });
-    }
+    document.addEventListener('DOMContentLoaded', () => {
+      // Show client ID from sessionStorage
+      const clientId = sessionStorage.getItem('clientId');
+      const display = document.getElementById('client-id-display');
+      if (clientId) {
+        display.textContent = "Client ID: " + clientId;
+      } else {
+        display.textContent = "Client ID not found.";
+      }
+
+      // Greeting using lastName
+      const lastName = sessionStorage.getItem('lastName');
+      if (lastName) {
+        document.getElementById('greeting').textContent = `Hey ${lastName} 👋`;
+      }
+
+      // Update clock every second
       function updateTime() {
         const now = new Date();
         const formatted = now.toLocaleTimeString();
         document.getElementById('currentTime').textContent = `Current Time: ${formatted}`;
       }
-  updateTime(); // initial call
-  setInterval(updateTime, 1000); // update every second
-    function formatFullDate(date) {
-      return date.zISOString().split('T')[0]; // YYYY-MM-DD for easier storage if needed
-    }
-    // Photo Upload Button
-        function handleUpload() {
-          const fileInput = document.getElementById("photoUpload");
-          const previewDiv = document.getElementById("photoPreview");
-          if (fileInput.files.length === 0) {
-            alert("Please choose a photo first.");
-            return;
-          }
-          const file = fileInput.files[0];
-          const reader = new FileReader();
-          reader.onload = function (e) {
-            previewDiv.innerHTML = `
-              <p><strong>Time of Day:</strong> Breakfast</p>
-              <img src="${e.target.result}" alt="Uploaded photo" style="max-width: 100%; height: auto; border: 1px solid #ccc; padding: 5px;" />
-            `;
-          };
-          reader.readAsDataURL(file);
-        }
-    // Handle form submit
-    photoForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const files = photoInput.files;
-      if (!files.length) {
-        alert('Please select at least one photo.');
-        return;
-      }
-      const clientId = sessionStorage.getItem('lastName'); // or however you store it
-      if (!clientId) {
-        alert('No client ID found. Please login again.');
-        return;
-      }
-      const date = formatFullDate(selectedDay); // 'YYYY-MM-DD'
-      async function getPresignedUrl(clientId, date, fileName) {
-        const response = await fetch('https://dcwa11ya30.execute-api.us-east-1.amazonaws.com/dev/upload', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ clientId, date, fileName })
-        });
-  if (!response.ok) {
-    throw new Error('Failed to get presigned URL');
-  }
-  const data = await response.json();
-  return data.uploadUrl; // This matches your Lambda response body
-}
-      try {
-        for (const file of files) {
-          const presignedUrl = await getPresignedUrl(clientId, date, file.name);
-        }
-        alert(`Successfully uploaded ${files.length} photo(s) for ${formatDate(selectedDay)}`);
-        photoForm.reset();
-        uploadSection.style.display = 'none';
-      } catch (error) {
-        alert('Upload failed: ' + error.message);
-      }
+      updateTime();
+      setInterval(updateTime, 1000);
     });
-      function signOut() {
-    sessionStorage.clear(); // Delete all session data
-    window.location.href = "index.html"; // Redirect to home
-  }
-  
+
+    // Photo Upload Handler for main chat section
+    function handleUpload() {
+      const fileInput = document.getElementById("photoUpload");
+      const previewDiv = document.getElementById("photoPreview");
+      if (fileInput.files.length === 0) {
+        alert("Please choose a photo first.");
+        return;
+      }
+      const file = fileInput.files[0];
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        previewDiv.innerHTML = `
+          <p><strong>Time of Day:</strong> Breakfast</p>
+          <img src="${e.target.result}" alt="Uploaded photo" style="max-width: 100%; height: auto; border: 1px solid #ccc; padding: 5px;" />
+        `;
+      };
+      reader.readAsDataURL(file);
+    }
+
+    // Other upload handlers (for leaderboards and settings) — you can implement similarly
+    function handleUploadLB() {
+      const fileInput = document.getElementById("photoUploadLB");
+      const previewDiv = document.getElementById("photoPreviewLB");
+      if (fileInput.files.length === 0) {
+        alert("Please choose a photo first.");
+        return;
+      }
+      const file = fileInput.files[0];
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        previewDiv.innerHTML = `<img src="${e.target.result}" alt="Uploaded photo LB" style="max-width:100%; height:auto; border:1px solid #ccc; padding:5px;" />`;
+      };
+      reader.readAsDataURL(file);
+    }
+
+    function handleUploadSettings() {
+      const fileInput = document.getElementById("photoUploadSettings");
+      const previewDiv = document.getElementById("photoPreviewSettings");
+      if (fileInput.files.length === 0) {
+        alert("Please choose a photo first.");
+        return;
+      }
+      const file = fileInput.files[0];
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        previewDiv.innerHTML = `<img src="${e.target.result}" alt="Uploaded photo Settings" style="max-width:100%; height:auto; border:1px solid #ccc; padding:5px;" />`;
+      };
+      reader.readAsDataURL(file);
+    }
+
+    async function sendMessage() {
+      const messageInput = document.getElementById("chatMessage");
+      const chatWindow = document.getElementById("chatWindow");
+      const message = messageInput.value.trim();
+
+      if (!message) return;
+
+      // Display user message
+      const userDiv = document.createElement("div");
+      userDiv.textContent = message;
+      userDiv.style.marginBottom = "5px";
+      userDiv.style.padding = "6px 10px";
+      userDiv.style.borderRadius = "8px";
+      userDiv.style.background = "#e0f7fa";
+      userDiv.style.alignSelf = "flex-start";
+      chatWindow.appendChild(userDiv);
+      chatWindow.scrollTop = chatWindow.scrollHeight;
+      messageInput.value = "";
+
+      // Placeholder for streaming response
+      const responseDiv = document.createElement("div");
+      responseDiv.textContent = "";
+      responseDiv.style.marginBottom = "5px";
+      responseDiv.style.padding = "6px 10px";
+      responseDiv.style.borderRadius = "8px";
+      responseDiv.style.background = "#fff9c4";
+      responseDiv.style.alignSelf = "flex-end";
+      chatWindow.appendChild(responseDiv);
+
+      // Call backend API streaming response
+      try {
+        const res = await fetch("/api/stream-response", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ message }),
+        });
+
+        if (!res.body) {
+          responseDiv.textContent = "No response body from server.";
+          return;
+        }
+
+        const reader = res.body.getReader();
+        const decoder = new TextDecoder();
+        let done = false;
+
+        while (!done) {
+          const { value, done: readerDone } = await reader.read();
+          if (value) {
+            const chunk = decoder.decode(value, { stream: true });
+            responseDiv.textContent += chunk;
+            chatWindow.scrollTop = chatWindow.scrollHeight;
+          }
+          done = readerDone;
+        }
+      } catch (error) {
+        responseDiv.textContent = "Error fetching response.";
+        console.error(error);
+      }
+    }
+
+    // Dummy signOut for footer link
+    function signOut() {
+      alert("Signing out...");
+      // Add your sign-out logic here
+    }
   </script>
 </body>
 </html>
